correction: contraste + méta description

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,8 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	font-size: large;
+	background-color: #b4a83c;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
